small/cst/small/SmallGrammarParser.py
# Generated from small/SmallGrammar.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SmallGrammarParser ( Parser ):

    grammarFileName = "SmallGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'while'", "'function'", 
                     "'return'", "'{'", "'}'", "'('", "')'", "','", "';'", 
                     "'='", "'and'", "'or'", "'+'", "'-'", "'*'", "'/'", 
                     "'>'", "'>='", "'<'", "'<='", "'=='", "'!='", "'True'", 
                     "'False'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "WHILE", "FUNCTION", "RETURN", 
                      "LBRACE", "RBRACE", "LPAR", "RPAR", "COMMA", "SEMICOLON", 
                      "ASSIGN", "AND", "OR", "ADD", "SUBSTRACT", "MULTIPLY", 
                      "DIVIDE", "GREATER", "GREATER_EQUAL", "LESS", "LESS_EQUAL", 
                      "EQUAL", "DIFFERENT", "TRUE", "FALSE", "NUM", "IDENTIFIER", 
                      "COMMENT", "NEWLINE", "WS" ]

    RULE_program = 0
    RULE_function = 1
    RULE_paramList = 2
    RULE_param = 3
    RULE_sequence = 4
    RULE_stmtList = 5
    RULE_stmt = 6
    RULE_assignStmt = 7
    RULE_ifStmt = 8
    RULE_whileStmt = 9
    RULE_returnStmt = 10
    RULE_exprList = 11
    RULE_funcCall = 12
    RULE_expr = 13
    RULE_arithExpr = 14
    RULE_boolExpr = 15
    RULE_binMathOp = 16
    RULE_binLogicOp = 17
    RULE_relOp = 18
    RULE_noprnd = 19
    RULE_boprnd = 20
    RULE_mathOp = 21
    RULE_logicOp = 22
    RULE_nop = 23

    ruleNames =  [ "program", "function", "paramList", "param", "sequence", 
                   "stmtList", "stmt", "assignStmt", "ifStmt", "whileStmt", 
                   "returnStmt", "exprList", "funcCall", "expr", "arithExpr", 
                   "boolExpr", "binMathOp", "binLogicOp", "relOp", "noprnd", 
                   "boprnd", "mathOp", "logicOp", "nop" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    WHILE=3
    FUNCTION=4
    RETURN=5
    LBRACE=6
    RBRACE=7
    LPAR=8
    RPAR=9
    COMMA=10
    SEMICOLON=11
    ASSIGN=12
    AND=13
    OR=14
    ADD=15
    SUBSTRACT=16
    MULTIPLY=17
    DIVIDE=18
    GREATER=19
    GREATER_EQUAL=20
    LESS=21
    LESS_EQUAL=22
    EQUAL=23
    DIFFERENT=24
    TRUE=25
    FALSE=26
    NUM=27
    IDENTIFIER=28
    COMMENT=29
    NEWLINE=30
    WS=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmallGrammarParser.FunctionContext)
            else:
                return self.getTypedRuleContext(SmallGrammarParser.FunctionContext,i)


        def getRuleIndex(self):
            return SmallGrammarParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SmallGrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 48
                self.function()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(SmallGrammarParser.FUNCTION, 0)

        def IDENTIFIER(self):
            return self.getToken(SmallGrammarParser.IDENTIFIER, 0)

        def LPAR(self):
            return self.getToken(SmallGrammarParser.LPAR, 0)

        def RPAR(self):
            return self.getToken(SmallGrammarParser.RPAR, 0)

        def stmtList(self):
            return self.getTypedRuleContext(SmallGrammarParser.StmtListContext,0)


        def paramList(self):
            return self.getTypedRuleContext(SmallGrammarParser.ParamListContext,0)


        def getRuleIndex(self):
            return SmallGrammarParser.RULE_function

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = SmallGrammarParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(SmallGrammarParser.FUNCTION)
            self.state = 55
            self.match(SmallGrammarParser.IDENTIFIER)
            self.state = 56
            self.match(SmallGrammarParser.LPAR)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==28:
                self.state = 57
                self.paramList()


            self.state = 60
            self.match(SmallGrammarParser.RPAR)
            self.state = 61
            self.stmtList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmallGrammarParser.ParamContext)
            else:
                return self.getTypedRuleContext(SmallGrammarParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SmallGrammarParser.COMMA)
            else:
                return self.getToken(SmallGrammarParser.COMMA, i)

        def getRuleIndex(self):
            return SmallGrammarParser.RULE_paramList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = SmallGrammarParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.param()
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 64
                self.match(SmallGrammarParser.COMMA)
                self.state = 65
                self.param()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(SmallGrammarParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return SmallGrammarParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = SmallGrammarParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(SmallGrammarParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SequenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(SmallGrammarParser.StmtContext,0)


        def LBRACE(self):
            return self.getToken(SmallGrammarParser.LBRACE, 0)

        def stmtList(self):
            return self.getTypedRuleContext(SmallGrammarParser.StmtListContext,0)


        def RBRACE(self):
            return self.getToken(SmallGrammarParser.RBRACE, 0)

        def getRuleIndex(self):
            return SmallGrammarParser.RULE_sequence

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSequence" ):
                return visitor.visitSequence(self)
            else:
                return visitor.visitChildren(self)




    def sequence(self):

        localctx = SmallGrammarParser.SequenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_sequence)
        try:
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 3, 5, 28]:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.stmt()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.match(SmallGrammarParser.LBRACE)
                self.state = 75
                self.stmtList()
                self.state = 76
                self.match(SmallGrammarParser.RBRACE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmallGrammarParser.StmtContext)
            else:
                return self.getTypedRuleContext(SmallGrammarParser.StmtContext,i)


        def getRuleIndex(self):
            return SmallGrammarParser.RULE_stmtList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtList" ):
                return visitor.visitStmtList(self)
            else:
                return visitor.visitChildren(self)




    def stmtList(self):

        localctx = SmallGrammarParser.StmtListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stmtList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 268435498) != 0):
                self.state = 80
                self.stmt()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignStmt(self):
            return self.getTypedRuleContext(SmallGrammarParser.AssignStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(SmallGrammarParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(SmallGrammarParser.WhileStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(SmallGrammarParser.ReturnStmtContext,0)


        def getRuleIndex(self):
            return SmallGrammarParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = SmallGrammarParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_stmt)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.assignStmt()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.ifStmt()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.whileStmt()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 89
                self.returnStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(SmallGrammarParser.IDENTIFIER, 0)

        def EQUAL(self):
            return self.getToken(SmallGrammarParser.EQUAL, 0)

        def SEMICOLON(self):
            return self.getToken(SmallGrammarParser.SEMICOLON, 0)

        def expr(self):
            return self.getTypedRuleContext(SmallGrammarParser.ExprContext,0)


        def funcCall(self):
            return self.getTypedRuleContext(SmallGrammarParser.FuncCallContext,0)


        def getRuleIndex(self):
            return SmallGrammarParser.RULE_assignStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStmt" ):
                return visitor.visitAssignStmt(self)
            else:
                return visitor.visitChildren(self)




    def assignStmt(self):

        localctx = SmallGrammarParser.AssignStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(SmallGrammarParser.IDENTIFIER)
            self.state = 93
            self.match(SmallGrammarParser.EQUAL)
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 94
                self.expr()
                pass

            elif la_ == 2:
                self.state = 95
                self.funcCall()
                pass


            self.state = 98
            self.match(SmallGrammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ifBody = None # SequenceContext
            self.elseBody = None # SequenceContext

        def IF(self):
            return self.getToken(SmallGrammarParser.IF, 0)

        def LPAR(self):
            return self.getToken(SmallGrammarParser.LPAR, 0)

        def boolExpr(self):
            return self.getTypedRuleContext(SmallGrammarParser.BoolExprContext,0)


        def RPAR(self):
            return self.getToken(SmallGrammarParser.RPAR, 0)

        def ELSE(self):
            return self.getToken(SmallGrammarParser.ELSE, 0)

        def sequence(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmallGrammarParser.SequenceContext)
            else:
                return self.getTypedRuleContext(SmallGrammarParser.SequenceContext,i)


        def getRuleIndex(self):
            return SmallGrammarParser.RULE_ifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = SmallGrammarParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ifStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(SmallGrammarParser.IF)
            self.state = 101
            self.match(SmallGrammarParser.LPAR)
            self.state = 102
            self.boolExpr()
            self.state = 103
            self.match(SmallGrammarParser.RPAR)
            self.state = 104
            localctx.ifBody = self.sequence()
            self.state = 105
            self.match(SmallGrammarParser.ELSE)
            self.state = 106
            localctx.elseBody = self.sequence()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(SmallGrammarParser.WHILE, 0)

        def LPAR(self):
            return self.getToken(SmallGrammarParser.LPAR, 0)

        def boolExpr(self):
            return self.getTypedRuleContext(SmallGrammarParser.BoolExprContext,0)


        def RPAR(self):
            return self.getToken(SmallGrammarParser.RPAR, 0)

        def sequence(self):
            return self.getTypedRuleContext(SmallGrammarParser.SequenceContext,0)


        def getRuleIndex(self):
            return SmallGrammarParser.RULE_whileStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = SmallGrammarParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(SmallGrammarParser.WHILE)
            self.state = 109
            self.match(SmallGrammarParser.LPAR)
            self.state = 110
            self.boolExpr()
            self.state = 111
            self.match(SmallGrammarParser.RPAR)
            self.state = 112
            self.sequence()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(SmallGrammarParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(SmallGrammarParser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(SmallGrammarParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return SmallGrammarParser.RULE_returnStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)




    def returnStmt(self):

        localctx = SmallGrammarParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_returnStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(SmallGrammarParser.RETURN)
            self.state = 115
            self.expr()
            self.state = 116
            self.match(SmallGrammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmallGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(SmallGrammarParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SmallGrammarParser.COMMA)
            else:
                return self.getToken(SmallGrammarParser.COMMA, i)

        def getRuleIndex(self):
            return SmallGrammarParser.RULE_exprList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprList" ):
                return visitor.visitExprList(self)
            else:
                return visitor.visitChildren(self)




    def exprList(self):

        localctx = SmallGrammarParser.ExprListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_exprList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.expr()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 119
                self.match(SmallGrammarParser.COMMA)
                self.state = 120
                self.expr()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(SmallGrammarParser.IDENTIFIER, 0)

        def LPAR(self):
            return self.getToken(SmallGrammarParser.LPAR, 0)

        def RPAR(self):
            return self.getToken(SmallGrammarParser.RPAR, 0)

        def exprList(self):
            return self.getTypedRuleContext(SmallGrammarParser.ExprListContext,0)


        def getRuleIndex(self):
            return SmallGrammarParser.RULE_funcCall

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncCall" ):
                return visitor.visitFuncCall(self)
            else:
                return visitor.visitChildren(self)




    def funcCall(self):

        localctx = SmallGrammarParser.FuncCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_funcCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(SmallGrammarParser.IDENTIFIER)
            self.state = 127
            self.match(SmallGrammarParser.LPAR)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 503316480) != 0):
                self.state = 128
                self.exprList()


            self.state = 131
            self.match(SmallGrammarParser.RPAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithExpr(self):
            return self.getTypedRuleContext(SmallGrammarParser.ArithExprContext,0)


        def boolExpr(self):
            return self.getTypedRuleContext(SmallGrammarParser.BoolExprContext,0)


        def getRuleIndex(self):
            return SmallGrammarParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = SmallGrammarParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_expr)
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.arithExpr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.boolExpr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def noprnd(self):
            return self.getTypedRuleContext(SmallGrammarParser.NoprndContext,0)


        def binMathOp(self):
            return self.getTypedRuleContext(SmallGrammarParser.BinMathOpContext,0)


        def getRuleIndex(self):
            return SmallGrammarParser.RULE_arithExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithExpr" ):
                return visitor.visitArithExpr(self)
            else:
                return visitor.visitChildren(self)




    def arithExpr(self):

        localctx = SmallGrammarParser.ArithExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_arithExpr)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.noprnd()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.binMathOp()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boprnd(self):
            return self.getTypedRuleContext(SmallGrammarParser.BoprndContext,0)


        def relOp(self):
            return self.getTypedRuleContext(SmallGrammarParser.RelOpContext,0)


        def binLogicOp(self):
            return self.getTypedRuleContext(SmallGrammarParser.BinLogicOpContext,0)


        def getRuleIndex(self):
            return SmallGrammarParser.RULE_boolExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolExpr" ):
                return visitor.visitBoolExpr(self)
            else:
                return visitor.visitChildren(self)




    def boolExpr(self):

        localctx = SmallGrammarParser.BoolExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_boolExpr)
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.boprnd()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.relOp()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.binLogicOp()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BinMathOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # NoprndContext
            self.right = None # NoprndContext

        def mathOp(self):
            return self.getTypedRuleContext(SmallGrammarParser.MathOpContext,0)


        def noprnd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmallGrammarParser.NoprndContext)
            else:
                return self.getTypedRuleContext(SmallGrammarParser.NoprndContext,i)


        def getRuleIndex(self):
            return SmallGrammarParser.RULE_binMathOp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinMathOp" ):
                return visitor.visitBinMathOp(self)
            else:
                return visitor.visitChildren(self)




    def binMathOp(self):

        localctx = SmallGrammarParser.BinMathOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_binMathOp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            localctx.left = self.noprnd()
            self.state = 147
            self.mathOp()
            self.state = 148
            localctx.right = self.noprnd()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BinLogicOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # NoprndContext
            self.right = None # NoprndContext

        def logicOp(self):
            return self.getTypedRuleContext(SmallGrammarParser.LogicOpContext,0)


        def noprnd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmallGrammarParser.NoprndContext)
            else:
                return self.getTypedRuleContext(SmallGrammarParser.NoprndContext,i)


        def getRuleIndex(self):
            return SmallGrammarParser.RULE_binLogicOp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinLogicOp" ):
                return visitor.visitBinLogicOp(self)
            else:
                return visitor.visitChildren(self)



